refactor(common): 提取请求客户端IP获取逻辑为工具类
- 新增 RequestUtil 工具类，封装获取客户端真实IP的方法
- 将 AccessLogInterceptor 中的 getClientIp 方法替换为 RequestUtil.getClientIp 调用
- 将 LoginLogService 中原有的getClientIp方法删除，改用 RequestUtil.getClientIp
- 将 RateLimitFilter 中的 getClientIp 方法替换为 RequestUtil.getClientIp 调用
- 优化 UserSessionService 中的代码简化判断逻辑
- 对 JwtAuthenticationSecurityConfig 中的匿名内部类改为Lambda表达式简化代码
- 统一日志拦截器关闭配置到 application.yml 中，支持关闭日志输出
- 优化 ChatWebSocketServer 中用户列表的添加遍历代码格式

--- a/origin-web/src/main/resources/application.yml
+++ b/origin-web/src/main/resources/application.yml
@@ -3,6 +3,11 @@
 # ===========================================
 server:
   port: 8081
+logging:
+  level:
+    # com.cosmos.origin.gateway.interceptor.AccessLogInterceptor: WARN
+    # 或完全关闭
+    com.cosmos.origin.gateway.interceptor.AccessLogInterceptor: OFF
 
 # ===========================================
 # Spring 核心配置
@@ -94,16 +99,16 @@ origin:
       default-limit: 100                    # 默认限流阈值（每秒请求数）
       time-window: 1                        # 限流时间窗口（秒）
       limit-message: "请求过于频繁，请稍后再试"   # 限流提示信息
-      path-limits:                          # 特定接口限流配置
+      path-limits: # 特定接口限流配置
         /api/user/login: 10                 # 登录接口限流 10/s
         /api/user/register: 10              # 注册接口限流 10/s
         /api/order/create: 20               # 下单接口限流 20/s
-    white-list:                             # 白名单路径
+    white-list: # 白名单路径
       - /health
       - /public
       - /swagger-ui
       - /v3/api-docs
-    black-list: []                          # 黑名单（IP或用户ID）
+    black-list: [ ]                          # 黑名单（IP或用户ID）
 
 # ===========================================
 # API 文档配置（SpringDoc + Knife4j）
