refactor(admin): 规范后端接口路径并优化文档配置
- 统一修改 Admin 模块控制器接口前缀，去除冗余路径前缀
- AdminFileController接口改为 /admin/file 路径，删除多余的 "/file" 子路径
- AdminRoleController接口改为 /admin/role 路径，简化接口映射路径
- AdminUserController接口改为 /admin/user 路径，修改相关接口映射删除多余"user"前缀
- 调整 application.yml，新增 Swagger API 分组配置，明确前后台接口组
- 更新 README.md，添加 origin-common 通用工具类说明及示例
- 新增 docker-compose.yml，支持 PostgreSQL、Redis、单体及微服务启动容器配置
- 添加微服务生成脚本 generate-service.sh，支持快速生成标准服务模块骨架
- 新增微服务化迁移指南文档，详细描述模块拆分、配置与迁移步骤

--- a/origin-web/src/main/resources/application.yml
+++ b/origin-web/src/main/resources/application.yml
@@ -121,13 +121,19 @@ springdoc:
   api-docs:
     path: /v3/api-docs
   group-configs:
-    - group: 'default'
+    # 后台管理接口组
+    - group: 'admin'
+      display-name: 'Admin 后台管理接口'
+      paths-to-match: '/admin/**'
+      packages-to-scan:
+        - com.cosmos.origin.admin.controller
+    # 前台接口组
+    - group: 'web'
+      display-name: 'Web 前台接口'
       paths-to-match: '/**'
       packages-to-scan:
-        # 指定扫描的包
-        - com.cosmos.origin.admin.controller
-        - com.cosmos.origin.websocket.controller
         - com.cosmos.origin.comment.controller
+        - com.cosmos.origin.websocket.controller
 
 # ===========================================
 # 评论功能配置
