refactor(file): 重构文件上传模块，迁移至通用oss服务包
- 删除origin-admin模块中AdminFileController及相关服务接口与实现
- 新增origin-oss-spring-boot-starter中FileController和FileService接口及实现
- FileService实现类使用MinioUtil统一管理文件上传
- 修改配置文件添加com.cosmos.origin.oss.controller包扫描
- 在oss启动器pom中添加knife4j-openapi3依赖，支持API文档
- 简化角色枚举，移除部分管理员角色定义

--- a/origin-framework/origin-oss-spring-boot-starter/pom.xml
+++ b/origin-framework/origin-oss-spring-boot-starter/pom.xml
@@ -32,6 +32,13 @@
             <groupId>io.minio</groupId>
             <artifactId>minio</artifactId>
         </dependency>
+
+        <!-- knife4j（API 文档工具）社区版 -->
+        <dependency>
+            <groupId>com.github.xingfudeshi</groupId>
+            <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
