--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,22 @@
 version: '3.8'
 
+# ============================================
+# Origin Spring Boot - Docker Compose 配置
+# ============================================
+# 支持两种架构模式：
+# 1. 单体模式 (monolith): 默认模式，所有服务本地加载
+# 2. 微服务模式 (microservice): 基于 Nacos 的服务注册发现
+#
+# 切换方式：
+#   单体模式: docker-compose up -d
+#   微服务模式: 
+#     1. 取消注释 nacos 服务
+#     2. 修改 origin-web 的 SPRING_PROFILES_ACTIVE=microservice
+#     3. docker-compose up -d
+# ============================================
+
 services:
-  # 数据库
+  # PostgreSQL 数据库
   postgres:
     image: postgres:15-alpine
     container_name: origin-postgres
@@ -16,8 +31,13 @@ services:
       - ./docs/sql/origin.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - origin-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U root -d origin"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
-  # Redis
+  # Redis 缓存
   redis:
     image: redis:7-alpine
     container_name: origin-redis
@@ -27,8 +47,34 @@ services:
       - redis_data:/data
     networks:
       - origin-network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
-  # 单体应用（当前模式）
+  # Nacos 服务注册中心（微服务模式必需）
+  # 单体模式下可注释掉此服务
+  nacos:
+    image: nacos/nacos-server:v2.3.0
+    container_name: origin-nacos
+    ports:
+      - "8848:8848"
+    environment:
+      - MODE=standalone
+      - PREFER_HOST_MODE=hostname
+      - NACOS_AUTH_ENABLE=false
+      - NACOS_CORE_AUTH_ENABLED=false
+    networks:
+      - origin-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8848/nacos"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # 单体模式应用（默认）
+  # 当 SPRING_PROFILES_ACTIVE=dev 时，以单体模式运行
   origin-web:
     build:
       context: .
@@ -37,49 +83,39 @@ services:
     ports:
       - "8081:8081"
     environment:
-      - SPRING_PROFILES_ACTIVE=dev
+      # 架构模式切换: dev(单体模式), microservice(微服务模式)
+      - SPRING_PROFILES_ACTIVE=${SPRING_PROFILES_ACTIVE:-dev}
       - DB_URL=jdbc:postgresql://postgres:5432/origin
       - DB_USERNAME=root
       - DB_PASSWORD=wzw123!@#
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - REDIS_PASSWORD=wzw123!@#
+      # Nacos 配置（微服务模式时启用）
+      - NACOS_SERVER_ADDR=${NACOS_SERVER_ADDR:-nacos:8848}
+      - NACOS_NAMESPACE=${NACOS_NAMESPACE:-}
+      - NACOS_GROUP=${NACOS_GROUP:-DEFAULT_GROUP}
     depends_on:
-      - postgres
-      - redis
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      # 微服务模式时启用 nacos 依赖
+      nacos:
+        condition: service_healthy
     networks:
       - origin-network
 
-  # ==================== 微服务模式（使用 Nacos） ====================
-  # 如需微服务架构，请先启动 Nacos：
-  # docker run -d --name nacos -p 8848:8848 -e MODE=standalone nacos/nacos-server:v2.3.0
-  # 
-  # 然后在 application.yml 中配置：
-  # spring:
-  #   cloud:
-  #     nacos:
-  #       discovery:
-  #         server-addr: localhost:8848
-  #       config:
-  #         server-addr: localhost:8848
-  # 
-  # 最后取消注释以下服务：
-  # 
-  # # API 网关
-  # origin-gateway:
-  #   build:
-  #     context: .
-  #     dockerfile: origin-gateway/Dockerfile
-  #   container_name: origin-gateway
-  #   ports:
-  #     - "8080:8080"
-  #   environment:
-  #     - SPRING_PROFILES_ACTIVE=dev
-  #     - NACOS_SERVER=localhost:8848
-  #   networks:
-  #     - origin-network
-  # 
-  # # 认证服务
+  # ============================================
+  # 微服务模式下的独立业务服务（按需启用）
+  # ============================================
+  # 如需启用微服务架构：
+  # 1. 设置环境变量: export SPRING_PROFILES_ACTIVE=microservice
+  # 2. 确保 nacos 服务已启用
+  # 3. 取消注释下面的业务服务
+  # 4. 重新构建并启动: docker-compose up -d --build
+  #
+  # 认证服务
   # origin-auth-service:
   #   build:
   #     context: .
@@ -88,15 +124,16 @@ services:
   #   ports:
   #     - "8082:8082"
   #   environment:
-  #     - SPRING_PROFILES_ACTIVE=dev
+  #     - SPRING_PROFILES_ACTIVE=microservice,dev
   #     - DB_URL=jdbc:postgresql://postgres:5432/origin_auth
-  #     - NACOS_SERVER=localhost:8848
+  #     - NACOS_SERVER_ADDR=nacos:8848
   #   depends_on:
   #     - postgres
+  #     - nacos
   #   networks:
   #     - origin-network
-  # 
-  # # 评论服务
+  #
+  # 评论服务
   # origin-comment-service:
   #   build:
   #     context: .
@@ -105,11 +142,12 @@ services:
   #   ports:
   #     - "8083:8083"
   #   environment:
-  #     - SPRING_PROFILES_ACTIVE=dev
+  #     - SPRING_PROFILES_ACTIVE=microservice,dev
   #     - DB_URL=jdbc:postgresql://postgres:5432/origin_comment
-  #     - NACOS_SERVER=localhost:8848
+  #     - NACOS_SERVER_ADDR=nacos:8848
   #   depends_on:
   #     - postgres
+  #     - nacos
   #   networks:
   #     - origin-network
 
