--- a/origin-framework/origin-redis-spring-boot-starter/pom.xml
+++ b/origin-framework/origin-redis-spring-boot-starter/pom.xml
@@ -26,10 +26,29 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
+        <!-- Commons Pool2 (Lettuce 连接池依赖) -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
+
         <!-- Redisson 分布式锁 -->
         <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson-spring-boot-starter</artifactId>
+            <exclusions>
+                <!-- 排除Redisson的自动配置，使用我们自己的配置 -->
+                <exclusion>
+                    <groupId>org.redisson</groupId>
+                    <artifactId>redisson-spring-data-30</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <!-- Redisson核心库 -->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
         </dependency>
 
         <!-- Spring Boot AutoConfigure -->
