fix(admin): 统一添加逻辑删除条件过滤
- 在AdminRoleServiceImpl分页查询角色时添加逻辑删除条件
- 在AdminUserServiceImpl分页查询用户时添加逻辑删除条件
- 在UserDetailServiceImpl查询用户角色时排除已逻辑删除的角色
- 在UserMapper中查询和更新用户时添加逻辑删除条件过滤
- RoleMapper新增查询所有启用且未逻辑删除角色的方法
- 新增DeletedEnum用于表示逻辑删除状态

chore(config): 调整和优化各环境网关及Redis配置

- 关闭所有环境下的网关限流开关
- 优化application-prod.yml中Redis连接池及超时配置
- 在多个配置文件中调整注释格式及空格统一
- 优化application.yml和application-microservice.yml中相关注释内容

feat(auth): 新增用户角色Redis缓存Key管理

- 在RedisKeyConstants中新增用户角色Key常量及Key构建方法

style(web): 优化WebSecurityConfig登录认证回调注释和结构

- 调整登录认证配置中注释编号和位置
- 简化登录锁定检查及登录成功失败回调代码注释内容

feat(admin): 新增权限相关Mapper接口

- 新增PermissonMapper用于权限数据操作
- 新增RolePermissionMapper用于角色权限关系操作

--- a/origin-web/src/main/resources/application-dev.yml
+++ b/origin-web/src/main/resources/application-dev.yml
@@ -38,7 +38,7 @@ origin:
   gateway:
     enabled: true
     rate-limit:
-      enabled: true
+      enabled: false
       default-limit: 200              # 开发环境放宽到 200/s
       time-window: 1
       # path-limits:
