--- a/origin-web/src/main/resources/application-prod.yml
+++ b/origin-web/src/main/resources/application-prod.yml
@@ -18,28 +18,27 @@ spring:
   # 如果 Redis 未启动，请使用 docker run -d --name redis -p 6379:6379 redis:latest 启动
   data:
     redis:
-      host: ${REDIS_HOST:127.0.0.1}
-      port: ${REDIS_PORT:6379}
-      password: ${REDIS_PASSWORD:wzw123!@#} # 如果 Redis 设置了密码，在此填写
-      database: 0
+      database: 0 # Redis 数据库索引（默认为 0）
+      host: ${REDIS_HOST:127.0.0.1} # Redis 服务器地址
+      port: ${REDIS_PORT:6379} # Redis 服务器连接端口
+      # password: ${REDIS_PASSWORD:wzw123!@#} # Redis 服务器连接密码（默认为空）
+      timeout: 5s # 读超时时间
+      connect-timeout: 5s # 链接超时时间
       lettuce:
         pool:
-          max-active: 8
-          max-wait: -1ms
-          max-idle: 8
-          min-idle: 0
-      # 连接超时时间（如果 Redis 不可用，快速失败）
-      connect-timeout: 2000ms
-      timeout: 2000ms
+          max-active: 200 # 连接池最大连接数
+          max-wait: -1ms # 连接池最大阻塞等待时间（使用负值表示没有限制）
+          min-idle: 0 # 连接池中的最小空闲连接
+          max-idle: 10 # 连接池中的最大空闲连接
 
 #=================================================================
-# 网关限流配置（开发环境可放宽限制）
+# 网关限流配置（生产环境）
 #=================================================================
 origin:
   gateway:
     enabled: true
     rate-limit:
-      enabled: true
+      enabled: false
       default-limit: 200              # 开发环境放宽到 200/s
       time-window: 1
       # path-limits:
